[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nontree"
dynamic = ["version"]
authors = [
  { name="Sebastian Dalfuß", email="py@sedf.de" },
]
description = "A package for n-tree 2D data structures similar to and including quadtree, with mapping to payload data."
readme = "README.md"
requires-python = ">=3.10"
license-files = { paths = ["LICENSE"] }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.optional-dependencies]
jit = ["numba",]
visualization = ["matplotlib",]

[project.urls]
homepage = "https://github.com/iehgit/nontree"
repository = "https://github.com/iehgit/nontree"
documentation = "https://pydocs.sedf.de/nontree"
"Bug Tracker" = "https://github.com/iehgit/nontree/issues"

[tool.hatch.version]
path = "src/nontree/__init__.py"
